# hello-pico

./: CMakeLists.txt  README.md  main.c
